fix bug of cursor and cards not overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,8 @@ body {
   left: 0;
   pointer-events: none;
 
-  z-index: 125 !important ;
+  z-index: 125 ;
+  /* transition: width 0.5s ease, height 0.5s ease; */
 }
 
 /***************************
